--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,15 @@ repositories {
     mavenCentral()
 }
 
+sourceSets {
+    main{
+        java{
+            srcDir 'build/generated/source/proto/main/grpc'
+            srcDir 'build/generated/source/proto/main/java'
+        }
+    }
+}
+
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
