--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.demo.grpc'
 version = '1.0-SNAPSHOT'
 
 application{
-    mainClass='com.demo.app.AccountServiceImpl'
+    ///
 }
 repositories {
     mavenCentral()
@@ -58,4 +58,16 @@ protobuf {
 
 test {
     useJUnitPlatform()
+}
+
+// Task to run the server
+task runServer(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.demo.app.AccountServiceImpl'
+}
+
+// Task to run the client
+task runClient(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.demo.app.AccountClient'
 }
