--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.demo.grpc'
 version = '1.0-SNAPSHOT'
 
 application{
-    ///
+    mainClass = 'com.demo.app.AccountServiceImpl'
 }
 repositories {
     mavenCentral()
