--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ group = 'com.demo.grpc'
 version = '1.0-SNAPSHOT'
 
 application{
-    mainClass = 'com.demo.app.AccountServiceImpl'
+    //mainClass = 'com.demo.app.AccountClient'//when using client.Dockerfile
+    //mainClass='com.demo.app.AccountService' //when using server.Dockerfile
 }
 repositories {
     mavenCentral()
