Refactored main to AccountServiceTest class Moved the AccountClient main method and its function calls to a separate class called AccountServiceTest and added a new task in build.gradle called runServiceTest.

--- a/build.gradle
+++ b/build.gradle
@@ -72,3 +72,9 @@ task runClient(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'com.demo.app.AccountClient'
 }
+
+//Task to run the test
+task runServiceTest(type: JavaExec){
+    classpath = sourceSets.main.runtimeClasspath
+    main='com.demo.app.AccountServiceTest'
+}
