--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ sourceSets {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
@@ -58,6 +60,9 @@ protobuf {
 }
 
 test {
+    useJUnitPlatform()
+}
+tasks.withType(Test) {
     useJUnitPlatform()
 }
 
