--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
 
     // https://mvnrepository.com/artifact/io.grpc/grpc-all
     implementation group: 'io.grpc', name: 'grpc-all', version: '1.64.0'
+
+    implementation 'mysql:mysql-connector-java:8.0.32'
 }
 
 protobuf {
