--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   accountserver:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: server.Dockerfile
     ports:
       - "50051:50051"
     networks:
